start button is working

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="hello">Hello World, TowerDefenseActivity!</string>
     <string name="app_name">TowerDefense</string>
+    <string name="start">Start</string>
 
 </resources>
